# dxt_optimization

./: CMakeLists.txt  README  init_vis.mac  optimize_dxt.cc  plot_hardening.cc  print_filter_fom.cc  vis.mac
data/tube_spectrum/: tungsten_12deg_0.8mmAl_080kVp.csv  tungsten_12deg_0.8mmAl_100kVp.csv  tungsten_12deg_0.8mmAl_120kVp.csv  tungsten_12deg_0.8mmAl_140kVp.csv  tungsten_12deg_0.8mmAl_160kVp.csv  tungsten_12deg_0.8mmAl_180kVp.csv  tungsten_12deg_0.8mmAl_200kVp.csv
gmacros/demo/: hardening.mac
gmacros/optimize/: filter_thickness.mac  filter_thickness_singlerun.mac
include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  EventAction.hh  Exception.hh  GeometryConfig.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorActionMessenger.hh  RunAction.hh  ScintillatorHit.hh  ScintillatorSD.hh  XraySpectrumSampler.hh
src/: ActionInitialization.cc  Analysis.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  EventAction.cc  Exception.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorActionMessenger.cc  RunAction.cc  ScintillatorHit.cc  ScintillatorSD.cc  XraySpectrumSampler.cc
